feat: Enhance header and section titles for improved accessibility and styling

--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Einstellungen - fourteenkilobytes</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- Use semantic header element for better document structure -->
   <header class="header">
     <div class="header-top">
       <!-- Logo with improved accessibility -->
-       <div class="logo-container">
-      <a href="index.html" class="logo" aria-label="14KB Dashboard">
-        <!-- SVG uses currentColor to inherit accent from CSS -->
-        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-          viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
-          <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-            <path d="M406 1889 c-175 -35 -325 -178 -371 -356 -21 -81 -22 -1071 -1 -1149
+      <div class="logo-container">
+        <a href="index.html" class="logo" aria-label="14KB Dashboard">
+          <!-- SVG uses currentColor to inherit accent from CSS -->
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+            viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
+            <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+              <path d="M406 1889 c-175 -35 -325 -178 -371 -356 -21 -81 -22 -1071 -1 -1149
 47 -176 194 -315 374 -353 61 -13 1058 -16 1066 -3 2 4 -22 29 -55 55 -67 54
 -152 157 -220 265 -24 39 -46 71 -49 72 -3 0 -18 -21 -34 -46 -41 -65 -64 -78
 -116 -64 -63 17 -74 3 -65 -82 5 -57 4 -69 -10 -74 -24 -10 -45 15 -45 54 0
@@ -38,29 +40,33 @@
 -31 -33 -41 -71 -41 -14 0 -34 -5 -45 -11 -26 -13 -15 -27 61 -79 30 -21 91
 -70 135 -109 44 -39 85 -71 92 -71 20 0 18 909 -2 1003 -15 73 -58 162 -106
 221 -40 48 -135 112 -207 139 -55 21 -71 22 -587 23 -305 1 -551 -2 -579 -7z" />
-          </g>
-        </svg>
-        <!-- Stacked wordmark for compact branding -->
-        <span class="logo-text" aria-hidden="true">14<br>KB</span>
-      </a></div>
+            </g>
+          </svg>
+          <!-- Stacked wordmark for compact branding -->
+          <span class="logo-text" aria-hidden="true">14<br>KB</span>
+        </a>
+      </div>
       <!-- Semantic nav with improved structure -->
       <nav class="header-nav" aria-label="Main navigation">
         <a href="index.html" class="nav-icon">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            aria-hidden="true">
             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
             <polyline points="9 22 9 12 15 12 15 22" />
           </svg>
           Übersicht
         </a>
         <a href="editor.html" class="nav-icon">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            aria-hidden="true">
             <line x1="12" y1="5" x2="12" y2="19" />
             <line x1="5" y1="12" x2="19" y2="12" />
           </svg>
           Neu
         </a>
         <a href="settings.html" class="nav-icon active" aria-current="page">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            aria-hidden="true">
             <circle cx="12" cy="12" r="3" />
             <path
               d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
@@ -68,7 +74,8 @@
           Einstellungen
         </a>
         <a href="/" target="_blank" rel="noopener" class="nav-icon external-link">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            aria-hidden="true">
             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
             <polyline points="15 3 21 3 21 9" />
             <line x1="10" y1="14" x2="21" y2="3" />
@@ -78,7 +85,8 @@
         <!-- Visual separator before logout -->
         <span class="nav-separator" aria-hidden="true"></span>
         <a href="#" id="logout-btn" class="nav-icon logout-icon">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            aria-hidden="true">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
             <polyline points="16 17 21 12 16 7" />
             <line x1="21" y1="12" x2="9" y2="12" />
@@ -106,7 +114,7 @@
       <!-- General Tab -->
       <div id="tab-general" class="tab-content active">
         <div class="form-group">
-          <label for="homepage-select">Startseite</label>
+          <h3 class="override-section-title">Startseite</h3>
           <p class="text-small text-muted mb-1">Wähle eine Seite, die als Startseite (/) angezeigt werden soll</p>
           <div style="display: flex; gap: 0.5rem; align-items: center;">
             <select id="homepage-select" class="homepage-select" style="flex: 1;">
@@ -147,11 +155,13 @@
         <!-- Meta Section -->
         <div class="override-section">
           <h3 class="override-section-title">Meta</h3>
-          <p class="text-small text-muted mb-1">Globale SEO-Tags die im &lt;head&gt; jeder Seite eingebettet werden (können pro Seite überschrieben werden)</p>
+          <p class="text-small text-muted mb-1">Globale SEO-Tags die im &lt;head&gt; jeder Seite eingebettet werden
+            (können pro Seite überschrieben werden)</p>
           <div class="meta-row">
             <div class="form-group">
               <label for="meta-description">Beschreibung</label>
-              <input type="text" id="meta-description" maxlength="160" placeholder="Eine kurze Beschreibung deines Blogs...">
+              <input type="text" id="meta-description" maxlength="160"
+                placeholder="Eine kurze Beschreibung deines Blogs...">
             </div>
             <div class="form-group">
               <label for="meta-author">Autor</label>
@@ -164,6 +174,7 @@
       <!-- Footer Tab -->
       <div id="tab-footer" class="tab-content hidden">
         <div class="override-section override-section-first">
+          <h3 class="override-section-title">Footer</h3>
           <div class="override-section-header">
             <label class="override-toggle">
               <input type="checkbox" id="footer-enabled">
@@ -171,7 +182,8 @@
             </label>
           </div>
           <div id="footer-editor" class="override-editor hidden">
-            <p class="text-small text-muted mb-1">Footer-Text (HTML erlaubt, <code>{{bytes}}</code> für Byte-Anzeige)</p>
+            <p class="text-small text-muted mb-1">Footer-Text (HTML erlaubt, <code>{{bytes}}</code> für Byte-Anzeige)
+            </p>
             <div class="footer-editor-row">
               <input type="text" id="footer-content" placeholder="© 2026 | {{bytes}}/14336 bytes">
             </div>
@@ -182,7 +194,7 @@
       <!-- CSS Tab -->
       <div id="tab-css" class="tab-content hidden">
         <div class="form-group">
-          <label for="css-mode">CSS-Vorlage</label>
+          <h3 class="override-section-title">CSS-Vorlage</h3>
           <p class="text-small text-muted mb-1">Wähle eine Vorlage oder verwende eigenes CSS</p>
           <select id="css-mode">
             <option value="default">Default (System-Fonts, neutral)</option>
@@ -218,7 +230,6 @@
     </div>
     <div class="card-body card-body-with-rail">
       <div class="card-content">
-        <p class="text-muted">Globale Einstellungen werden in jede Seite eingebettet und verbrauchen Speicherplatz.</p>
         <div class="breakdown-table">
           <div class="breakdown-row">
             <span>Base</span>
@@ -304,7 +315,7 @@
 
   <script type="module" src="app.js"></script>
   <script type="module">
-    (async function() {
+    (async function () {
       // Check if setup is complete
       const status = await App.getSetupStatus();
       if (!status.setupComplete) {
@@ -605,12 +616,12 @@
           const allPosts = await App.getPosts();
 
           console.log('Posts Data:', allPosts);
-          
+
           // Homepage
           homepageSelect.innerHTML = '<option value="">— Standard (automatische Postliste) —</option>';
           const pages = allPosts.filter(p => p.pageType === 'page' && p.status === 'published');
           console.log('Filtered pages:', pages);
-          
+
           for (const page of pages) {
             const option = document.createElement('option');
             option.value = page.slug;
@@ -753,4 +764,5 @@
     })();
   </script>
 </body>
+
 </html>
