--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -141,7 +141,7 @@
               </div>
             </div>
             <div class="favicon-actions">
-              <label class="btn-primary favicon-upload-btn">
+              <label class="btn btn-primary">
                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                   <polyline points="17 8 12 3 7 8"></polyline>
@@ -150,7 +150,13 @@
                 Hochladen
                 <input type="file" id="favicon-input" accept="image/png,image/x-icon,image/svg+xml,image/gif" hidden>
               </label>
-              <button type="button" id="favicon-remove" class="btn-secondary btn-small hidden">Entfernen</button>
+              <button type="button" id="favicon-remove" class="btn btn-primary hidden">
+                <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="3 6 5 6 21 6"></polyline>
+                  <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                </svg>
+                Entfernen
+              </button>
             </div>
             <input type="hidden" id="favicon-data">
           </div>
