--- a/public/admin/setup.html
+++ b/public/admin/setup.html
@@ -25,7 +25,7 @@
           <input type="password" id="password-confirm" placeholder="Passwort bestätigen">
         </div>
 
-        <button id="setup-btn" class="btn-primary build-publish-btn">Einrichten</button>
+        <button id="setup-btn" class="btn btn-primary build-publish-btn">Einrichten</button>
         <p id="setup-error" class="message error hidden mt-1"></p>
         <p class="text-muted text-small mt-2" style="text-align: center;">Bei Passwortverlust: <code>data/instance.json</code> löschen</p>
       </div>
