--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -17,7 +17,7 @@
           <label for="password">Passwort</label>
           <input type="password" id="password" placeholder="Passwort eingeben">
         </div>
-        <button id="login-btn" class="btn-primary build-publish-btn">Anmelden</button>
+        <button id="login-btn" class="btn btn-primary build-publish-btn">Anmelden</button>
         <p id="login-error" class="message error hidden mt-1"></p>
       </div>
     </div>
